--- a/public/index.html
+++ b/public/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+    <link rel="stylesheet" href="build/jodit.min.css">
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta
@@ -40,4 +41,7 @@
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
   </body>
+  
+<script src="build/jodit.min.js"></script>
+
 </html>
